--- a/FinalProject/src/main/resources/application.properties
+++ b/FinalProject/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url = jdbc:mysql://localhost:3306/projectjava
+spring.datasource.username = root
+spring.datasource.password = 
+logging.level.root = INFO
